--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sofa.ark.version>2.0.0-SNAPSHOT</sofa.ark.version>
+		<sofa.ark.version>2.0.0</sofa.ark.version>
 	</properties>
 
 	<dependencies>
