--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>2.7.16</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sofa.ark.version>2.1.3</sofa.ark.version>
+		<sofa.ark.version>2.2.3</sofa.ark.version>
 	</properties>
 
 	<dependencies>
@@ -64,13 +64,18 @@
 			<version>${sofa.ark.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alipay.sofa.serverless</groupId>
+			<artifactId>sofa-serverless-base-starter</artifactId>
+			<version>0.3.4</version>
+		</dependency>
+
 <!--		静态合并部署-->
-<!--		<dependency>-->
-<!--			<groupId>com.alipay.sofa</groupId>-->
-<!--			<artifactId>spring-boot-ark-biz</artifactId>-->
-<!--			<version>0.0.1-SNAPSHOT</version>-->
-<!--			<classifier>ark-biz</classifier>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.alipay.sofa</groupId>
+			<artifactId>spring-boot-ark-biz</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 
