--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
     <properties>
         <spring.boot.version>2.7.16</spring.boot.version>
         <java.version>1.8</java.version>
-        <sofa.ark.version>2.2.3</sofa.ark.version>
-        <sofa.serverless.runtime.version>0.3.3</sofa.serverless.runtime.version>
+        <sofa.ark.version>2.2.4-SNAPSHOT</sofa.ark.version>
+        <sofa.serverless.runtime.version>0.3.4</sofa.serverless.runtime.version>
     </properties>
 
     <modules>
