--- a/samples/web/tomcat/biz2/pom.xml
+++ b/samples/web/tomcat/biz2/pom.xml
@@ -9,12 +9,13 @@
         <relativePath>../../../../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.alipay.sofa.web</groupId>
-    <artifactId>biz2</artifactId>
+    <artifactId>biz2-web-single-host</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>biz2</name>
     <description>biz2</description>
 
     <dependencies>
+        <!-- 这里设置为 provided，使用基座的依赖，详细查看类委托加载机制 https://www.sofastack.tech/projects/sofa-boot/sofa-ark-class-loader-delegation/ -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -23,26 +24,14 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>com.alipay.sofa.serverless</groupId>-->
-<!--            <artifactId>sofa-serverless-app-starter</artifactId>-->
-<!--            <version>${sofa.serverless.runtime.version}</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
         <plugins>
+            <!-- 修改打包插件为 sofa-ark biz 打包插件，打包成 ark biz jar -->
             <plugin>
                 <groupId>com.alipay.sofa</groupId>
                 <artifactId>sofa-ark-maven-plugin</artifactId>
@@ -59,11 +48,9 @@
                     <skipArkExecutable>true</skipArkExecutable>
                     <outputDirectory>./target</outputDirectory>
                     <bizName>biz2</bizName>
+                    <!-- 单host下需更换 web context path -->
                     <webContextPath>biz2</webContextPath>
                     <declaredMode>true</declaredMode>
-                    <!--					打包、安装和发布 ark biz-->
-                    <!--					静态合并部署需要配置-->
-                    <!--					<attach>true</attach>-->
                 </configuration>
             </plugin>
         </plugins>
