--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,13 @@
         <java.version>1.8</java.version>
         <sofa.ark.version>2.2.4-SNAPSHOT</sofa.ark.version>
         <sofa.serverless.runtime.version>0.5.0</sofa.serverless.runtime.version>
+        <disruptor.version>3.4.2</disruptor.version>
     </properties>
 
     <modules>
+        <module>samples/logging/log4j2/base</module>
+        <module>samples/logging/log4j2/biz1</module>
+        <module>samples/logging/log4j2/biz2</module>
         <module>samples/web/tomcat/base</module>
         <module>samples/web/tomcat/biz1</module>
         <module>samples/web/tomcat/biz2</module>
@@ -74,6 +78,11 @@
                         <artifactId>logback-classic</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>${disruptor.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
