--- a/samples/web/tomcat/base/pom.xml
+++ b/samples/web/tomcat/base/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../../../../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.alipay.sofa</groupId>
-	<artifactId>base</artifactId>
+	<artifactId>base-web-single-host</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>base</name>
 	<description>base</description>
@@ -26,21 +26,24 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- 这里添加动态模块相关依赖 -->
-		<dependency>
-			<groupId>com.alipay.sofa.serverless</groupId>
-			<artifactId>sofa-serverless-base-starter</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 
+		<!-- 这里添加动态模块相关依赖 -->
+		<dependency>
+			<groupId>com.alipay.sofa.serverless</groupId>
+			<artifactId>sofa-serverless-base-starter</artifactId>
+		</dependency>
+		<!-- end 动态模块相关依赖 -->
+
+		<!-- 这里添加 tomcat 单 host 模式部署多web应用的依赖 -->
 		<dependency>
 			<groupId>com.alipay.sofa</groupId>
 			<artifactId>web-ark-plugin</artifactId>
 		</dependency>
+		<!-- end 单 host 部署的依赖 -->
 	</dependencies>
 
 	<build>
