--- a/samples/web/tomcat/base/src/main/resources/application.properties
+++ b/samples/web/tomcat/base/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=base
-logging.file.path=./logs/${spring.application.name}
+logging.file.path=./web/tomcat/logs/
+logging.path=./web/tomcat/logs/
